# rig

./: .gitignore  COPYING  COPYING-cogl  Makefile.am  Makefile.emscripten  README.in  README.md  autogen.sh  build.sh  common.gypi  config-custom.h  config.h.emscripten  configure.ac  configure.in  gyp_configure.py  meson.build  meson_options.txt  rig.doap  rig.gyp
LibOVR/: Makefile.am  libovr.gyp
LibOVR/Src/: OVR_CAPI.h
android/: Makefile.am  config.h  rig-defines.h
android/cogl/: cogl-egl-defines.h
android/slave/: AndroidManifest.xml
cglib/cglib/: Android.mk  Makefile.am  Makefile.emscripten  Makefile.sources  cg-atlas-private.h  cg-atlas-set-private.h  cg-atlas-set.c  cg-atlas-set.h  cg-atlas-texture-private.h  cg-atlas-texture.c  cg-atlas-texture.h  cg-atlas.c  cg-atlas.h  cg-attribute-buffer-private.h  cg-attribute-buffer.c  cg-attribute-buffer.h  cg-attribute-private.h  cg-attribute.c  cg-attribute.h  cg-bitmap-conversion.c  cg-bitmap-pack.h  cg-bitmap-pixbuf.c  cg-bitmap-private.h  cg-bitmap-unpack-fallback.h  cg-bitmap-unpack-unsigned-normalized.h  cg-bitmap.c  cg-bitmap.h  cg-bitmask.c  cg-bitmask.h  cg-blend-string.c  cg-blend-string.h  cg-blit.c  cg-blit.h  cg-boxed-value.c  cg-boxed-value.h  cg-buffer-private.h  cg-buffer.c  cg-buffer.h  cg-clip-stack.c  cg-clip-stack.h  (+180 more)
cglib/clib/: .gitrepo  .travis.yml  COPYING  Makefile.am  README.md  clib-config.h  clib.gyp  configure.ac
cglib/test-fixtures/: Makefile.am  test-cg-fixtures.h
clib/src/: Android.mk  Makefile.am  Makefile.emscripten  Makefile.source  Makefile.sources  ascii_snprintf.c  carray.c  cbytearray.c  cdate-unix.c  cdate-win32.c  cdebugkey.c  cdir-unix.c  cdir-win32.c  cerror.c  ceuler.c  ceuler.h  cfile-emscripten.c  cfile-posix.c  cfile-unix.c  cfile-win32.c  cfile.c  chashtable.c  chooklist.c  ciconv.c  clib-config.h.in  clib-platform.h  clib-web.h  clib-web.js  clib.h  clist.c  cllist.c  cmatrix.c  cmatrix.h  cmem.c  cmisc-emscripten.c  cmisc-unix.c  cmisc-win32.c  cmodule-unix.c  cmodule-win32.c  cmodule.c  (+33 more)
cogl/: Android.mk  Makefile.am  Makefile.emscripten  Makefile.sources  cogl-atlas-private.h  cogl-atlas-set-private.h  cogl-atlas-set.c  cogl-atlas-set.h  cogl-atlas-texture-private.h  cogl-atlas-texture.c  cogl-atlas-texture.h  cogl-atlas.c  cogl-atlas.h  cogl-attribute-buffer-private.h  cogl-attribute-buffer.c  cogl-attribute-buffer.h  cogl-attribute-private.h  cogl-attribute.c  cogl-attribute.h  cogl-auto-texture.c  cogl-bitmap-conversion.c  cogl-bitmap-pack.h  cogl-bitmap-packing.h  cogl-bitmap-pixbuf.c  cogl-bitmap-private.h  cogl-bitmap-unpack-fallback.h  cogl-bitmap-unpack-unsigned-normalized.h  cogl-bitmap.c  cogl-bitmap.h  cogl-bitmask.c  cogl-bitmask.h  cogl-blend-string.c  cogl-blend-string.h  cogl-blit.c  cogl-blit.h  cogl-boxed-value.c  cogl-boxed-value.h  cogl-buffer-private.h  cogl-buffer.c  cogl-buffer.h  (+230 more)
cogl-gst/: Makefile.am  cogl-gst-plugin.c  cogl-gst-video-sink.c  cogl-gst-video-sink.h  cogl-gst.h
cogl-pango/: Makefile.am  cogl-pango-display-list.c  cogl-pango-display-list.h  cogl-pango-fontmap.c  cogl-pango-glyph-cache.c  cogl-pango-glyph-cache.h  cogl-pango-pipeline-cache.c  cogl-pango-pipeline-cache.h  cogl-pango-private.h  cogl-pango-render.c  cogl-pango.h  cogl-pango2.pc.in
cogl-path/: Makefile.am  cogl-path-private.h  cogl-path.c  cogl-path.h
cogl-path/tesselator/: dict.c  dict.h  geom.c  geom.h  memalloc.h  mesh.c  mesh.h  normal.c  priorityq-heap.c  priorityq-heap.h  priorityq.c  priorityq.h  render.c  sweep.c  (+6 more)
data/: Info.plist.in  Makefile.am  camera-model.ply  light.ply  rig-key-pub.pem  rig-mime.xml  rig.desktop  rig.ui
editor/: AndroidManifest.xml  Makefile.am  main.c
examples/: Makefile.am  cogl-crate.c  cogl-gles2-context.c  cogl-info.c  cogl-msaa.c  cogl-point-sprites.c  cogl-x11-foreign.c  cogl-x11-tfp.c  cogland.c  entities.c  particle-engine.c
libyuv/: .git-subdir  Makefile.am
protobuf-c/: .git-subdir  Makefile.am  common.gypi  configure.ac  protobuf-c.gyp
rig/: Android.mk  Makefile.am  Makefile.emscripten  Makefile.sources  build.xml  color-table.h  mash-data-loader.h  mash-ply-loader.c  rig-application.c  rig-application.h  rig-arcball.c  rig-arcball.h  rig-asset-inspector.c  rig-asset-inspector.h  rig-asset.c  rig-asset.h  rig-avahi.c  rig-avahi.h  rig-bevel.c  rig-bevel.h  rig-binding-view.c  rig-binding-view.h  rig-binding.c  rig-binding.h  rig-bitmask.c  rig-bitmask.h  rig-c-mesh.c  rig-c-mesh.h  rig-c.c  rig-c.h  rig-camera-private.h  rig-camera-view.c  rig-camera-view.h  rig-closure.c  rig-closure.h  rig-code-module.c  rig-code-module.h  rig-code.c  rig-code.h  rig-codegen.h  (+177 more)
rut/: Android.mk  Makefile.am  Makefile.emscripten  Makefile.sources  color-table.h  edid-parse.c  edid-parse.h  fmemopen.c  fmemopen.h  gstmemsrc.c  gstmemsrc.h  mash-data-loader.c  mash-data.c  mash-data.h  mash-ply-loader.c  mash-ply-loader.h  rply.c  rply.h  rut-adb.c  rut-adb.h  rut-alsa-shell.c  rut-alsa-shell.h  rut-android-shell.c  rut-android-shell.h  rut-arcball.c  rut-arcball.h  rut-asset-inspector.c  rut-asset-inspector.h  rut-asset.c  rut-asset.h  rut-bevel.c  rut-bevel.h  rut-bin.c  rut-bin.h  rut-bitmask.c  rut-bitmask.h  rut-box-layout.c  rut-box-layout.h  rut-button.c  rut-button.h  (+182 more)
test-fixtures/: Makefile.am  common.gypi  test-cg-fixtures.c  test-cg-fixtures.h  test-fixtures.c  test-fixtures.gyp  test-fixtures.h  test-unit.h  test-utils.c  test-utils.h
tools/: Makefile.am  bump-map-gen.c  check-signature.c  rig-package-html5  signing-notes.txt
toys/: Makefile.am  cogl-basic-video-player.c  cogl-crate.c  cogl-emscripten-hello.c  cogl-gles2-context.c  cogl-gles2-gears.c  cogl-hello.c  cogl-info.c  cogl-maze.c  cogl-msaa.c  cogl-point-sprites.c  cogl-sdl-hello.c  cogl-sdl2-hello.c  cogl-x11-foreign.c  cogl-x11-tfp.c  cogland.c  emscripten-example-js.h  libovr-test.c  realsense-test.c  rig-hello.c  shell-hello.c  vr-test.c
wslay/: .git-subdir  .gitignore  Makefile.am  common.gypi  wslay.gyp
xdgmime/: Makefile.am  glob.c  glob.h  magic.c  magic.h  xdgmime-config.h  xdgmime-query  xdgmime-query.c  xdgmime-test  xdgmime.c  xdgmime.h
(+834 files in other folders)
